<resources>
    <string name="app_name">Tiempo</string>
    <string name="loading">Cargando datos...</string>
    <string name="error_prefix">Error: </string>
    <string name="location_label">--</string>
    <string name="consultar">Consultar</string>
    <string name="enter_pws_id">Introduce ID de Estación PWS:</string>
    <string name="hint_pws_id">ej. IPOZUE59</string>
    <string name="fahrenheit">Fahrenheit (°F)</string>
    <string name="celsius">Celsius (°C)</string>
    <string name="current_conditions">Condiciones Actuales: --</string>
    <string name="forecast_label">Pronóstico 5 Días:</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_favorites">Favoritos</string>
    <string name="add_favorite">Añadir a Favoritos</string>
    <string name="favorite_name_hint">Nombre (ej. Casa)</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="remove">Eliminar</string>
    <string name="station_not_found">Estación no encontrada.</string>
    <string name="no_favorites">No hay favoritos guardados.</string>
    <string name="menu_settings">Ajustes</string>
    <string name="pref_category_units">Unidades</string>
    <string name="pref_category_theme">Tema</string>
    <string name="theme_light">Claro</string>
    <string name="theme_dark">Oscuro</string>
    <string name="theme_system">Sistema</string>
    <string name="pref_category_language">Idioma</string>
    <string name="lang_spanish">Español</string>
    <string name="lang_english">Inglés</string>
    <string name="pref_unit_temp">Temperatura</string>
    <string name="pref_unit_speed">Velocidad</string>
    <string name="pref_unit_precip">Precipitación</string>
    <string name="speed_kmh">km/h</string>
    <string name="speed_mph">mph</string>
    <string name="precip_mm">mm</string>
    <string name="precip_in">pulgadas</string>
    <string name="graphs_24h">Gráficos 24h</string>
    <string name="graph_temp">Temperatura</string>
    <string name="graph_feels_like">Sensación</string>
    <string name="graph_feels_like_full">Sensación Térmica</string>
    <string name="graph_wind">Viento</string>
    <string name="graph_precip">Precipitación</string>
    <string name="graph_solar">Radiación Solar</string>
    <string name="graph_solar_unit">Radiación Solar (W/m²)</string>
    <string name="graph_uv">Índice UV</string>
    <string name="graph_pressure">Presión</string>
    <string name="label_rain">Lluvia</string>
    <string name="label_sunrise">Amanecer</string>
    <string name="label_sunset">Anochecer</string>
    <string name="label_moon_phase">Fase lunar</string>
    <string name="pref_colors_title">Colores de Gráficos</string>
    <string name="pref_reset_colors">Restablecer Colores por Defecto</string>
    <string name="label_humidity">Humedad</string>
    <string name="label_gust">Ráfaga</string>
    <string name="version_label">v1.1.5</string>
</resources>
